Update index html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="Automatic Defurnishing of Indoor Panoramas">
+    <meta name="description" content="Defurnishing with X-Ray Vision: Joint Removal of Furniture from Panoramas and Mesh">
     <meta name="keywords" content="defurnishing, panoramas, indoor">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Automatic Defurnishing of Indoor Panoramas</title>
+    <title>Defurnishing with X-Ray Vision: Joint Removal of Furniture from Panoramas and Mesh</title>
 
     <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
 
