--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <img src="./static/logo.png" alt="Matterport" style="height: 8rem; margin: 5rem;">
                 </div>
                 <BR><BR> -->
-                        <h1 class="title is-1 publication-title">An Empty Room is All We Want: <br> Automatic Defurnishing of Indoor Panoramas</h1>
+                        <h1 class="title is-1 publication-title">Defurnishing with X-Ray Vision: <BR> Joint Removal of Furniture from Panoramas and Mesh</h1>
                         <div class="is-size-5 publication-authors">
                             <span class="author-block">
                                 Mira Slavcheva<sup>*</sup>,</span>
