Update author list

--- a/index.html
+++ b/index.html
@@ -46,29 +46,32 @@
                         <h1 class="title is-1 publication-title">Defurnishing with X-Ray Vision: <BR> Joint Removal of Furniture from Panoramas and Mesh</h1>
                         <div class="is-size-5 publication-authors">
                             <span class="author-block">
-                                Mira Slavcheva<sup>*</sup>,</span>
+                                Alan Dolhasz<sup>*</sup>,</span>
                             <span class="author-block">
-                                Dave Gausebeck<sup>*</sup>,</span>
+                                Chen Ma<sup>*</sup>,</span>
                             <span class="author-block">
-                                Kevin Chen<sup>*</sup>,
+                                Dave Gausebeck<sup>*</sup>,
                             </span><BR>
                             <span class="author-block">
-                                David Buchhofer,
+                                Kevin Chen,
+                            </span>
+                            <span class="author-block">
+                                Gregor Miller,
+                            </span>
+                            <span class="author-block">
+                                Lucas Hayne,
+                            </span>
+                            <span class="author-block">
+                                Gunnar Hovden,
                             </span>
                             <span class="author-block">
                                 Azwad Sabik,
                             </span>
                             <span class="author-block">
-                                Chen Ma,
-                            </span>
-                            <span class="author-block">
-                                Sachal Dhillon,
-                            </span>
-                            <span class="author-block">
                                 Olaf Brandt,
                             </span>
                             <span class="author-block">
-                                Alan Dolhasz
+                                Mira Slavcheva,
                             </span>
                             <div class="is-size-6 publication-authors"><i><span class="author-block"></span><sup>*</sup>
                                     denotes equal contribution </span></i></div>
