--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                         <span class="icon">
                                             <i class="fas fa-images"></i>
                                         </span>
-                                        <span>Comparisons 1</span>
+                                        <span>2D Comparisons</span>
                                     </a>
                                 </span>
                                 <span class="link-block">
@@ -129,7 +129,16 @@
                                         <span class="icon">
                                             <i class="fas fa-images"></i>
                                         </span>
-                                        <span>Comparisons 2</span>
+                                        <span>3D Comparisons</span>
+                                    </a>
+                                </span>
+                                <span class="link-block">
+                                    <a href="https://arxiv.org/abs/2405.03682" class="external-link button is-normal is-rounded is-black">
+                                        <span> &nbsp; &nbsp; &nbsp; </span>
+                                        <span class="icon">
+                                            <i class="ai ai-arxiv"></i>
+                                        </span>
+                                        <span>Prequel &nbsp; &nbsp; &nbsp;</span>
                                     </a>
                                 </span>
                             </div>
@@ -221,7 +230,7 @@
         <div class="container is-max-desktop">
             <div class="columns is-centered has-text-centered">
                 <div class="column is-four-fifths">
-                    <h2 class="title is-3" id="comparisons1">Comparisons 1</h2>
+                    <h2 class="title is-3" id="comparisons1">2D Comparisons</h2>
                     <div class="content has-text-justified">
                         <div class="column is-max-desktop">
                             <p>
@@ -245,7 +254,7 @@
         <div class="container is-max-desktop">
             <div class="columns is-centered has-text-centered">
                 <div class="column is-four-fifths">
-                    <h2 class="title is-3" id="comparisons2">Comparisons 2</h2>
+                    <h2 class="title is-3" id="comparisons2">3D Comparisons</h2>
                     <div class="content has-text-justified">
                         <div class="column is-max-desktop">
                             <p>
@@ -294,7 +303,7 @@
                 <p>
                     The paper has been accepted to the <a href="https://cveu.github.io/">Workshop on AI for Creative Visual Content Generation, Editing and Understanding</a> at CVPR 2025.
                 </p>
-                    <pre><code>@inproceedings{matterport2024defurnishing,
+                    <pre><code>@inproceedings{matterport2025defurnishing,
     author    = {Dolhasz, Alan and Ma, Chen and Gausebeck, Dave and Chen, Kevin and Miller, Gregor and Hayne, Lucas and Hovden, Gunnar and Sabik, Azwad and Brandt, Olaf and Slavcheva, Mira},
     title     = {Defurnishing with X-Ray Vision: Joint Removal of Furniture from Panoramas and Mesh},
     booktitle = {IEEE/CVF Conference on Computer Vision and Pattern Recognition Workshops (CVPRW)},
