zoom call changes 2

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <h2 class="title is-3">Acknowledgements</h2>
                 <div class="content has-text-justified">
                 <p>
-                    We are greateful to Dorra Larnaout, Ky Waegel, Mykhaylo Kurinnyy, Neil Jassal, Will Yu and Senthil Palanisamy for their contributions to this work.
+                    We are greateful to Dorra Larnaout, Ky Waegel, Mykhaylo Kurinnyy, Neil Jassal, Will Yu, Senthil Palanisamy and Zack Baker for their contributions to this work.
                 </p>
                 </div>
             </div>
