--- a/index.html
+++ b/index.html
@@ -180,6 +180,15 @@
     </section>
 
     <section class="section">
+        <div class="container is-four-fifths">
+            <video autoplay loop muted playsinline>
+                <source src="static/images/dollhouses.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+    </section>
+
+    <section class="section">
         <div class="container is-max-desktop">
             <!-- Pipeline. -->
             <div class="columns is-centered has-text-centered">
