--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <div class="column has-text-centered">
                             <div class="publication-links">
                                 <span class="link-block">
-                                    <a href="https://arxiv.org/abs/tbd.tbd" class="external-link button is-normal is-rounded is-black">
+                                    <a href="https://arxiv.org/abs/2506.05338" class="external-link button is-normal is-rounded is-black">
                                         <span> &nbsp; &nbsp; &nbsp; &nbsp; </span>
                                         <span class="icon">
                                             <i class="ai ai-arxiv"></i>
